--- a/client/e-commerce-project/index.html
+++ b/client/e-commerce-project/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fuggles&family=Open+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fuggles&family=Mooli&family=Open+Sans&family=Playfair+Display:wght@500&display=swap"
       rel="stylesheet"
     />
     <title>FashioNest</title>
